--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
     <link rel="stylesheet" href="assets/css/style.css"/>
     <link rel="stylesheet" href="assets/css/responsive.css">
-	<link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico">
+	<link rel="icon" type="image/x-icon" href="assets/img/favicon.png">
     <title>Portfolio</title>
 </head>
 <body>
