--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <div class="slika"><img src="assets/img/sliika2.jpg" alt="sliika2" width="250px"></div>
             <div class="tekst">
                 <h2>ABOUT ME</h2>
-                <p>My name is Emilija, and I am currently studying at the <span>High ICT School</span>, 
+                <p>My name is Emilija, and I am currently studying at the <span>University of ICT </span>, 
                     specializing in the IT field.</p><br><br>
                 <p>I am dedicated to creating my own websites and am just starting my 
                     career in web development. With a focus on <span>HTML</span>  and  <span>CSS</span> for crafting user interfaces and experiences,
